- updated some functionality

--- a/src/main/resources/lang_uk_UA.properties
+++ b/src/main/resources/lang_uk_UA.properties
@@ -134,7 +134,7 @@ EG_noGoals=У вас немає задач щоб їх змінювати
 EG_select=Оберіть задачу яку ви хочете редагувати:\n
 
 !TimerService(reminder)
-TS_remind=Нагадую вам про ваму задачу. 📮\n
+TS_remind=Нагадую вам про вашу задачу. 📮\n
 
 !GoalsEntity
 GE_toString=\n\
